# NEW-BACKEND

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SUMMARY.md  CLEAN_ARCHITECTURE_SUMMARY.md  COMPLIANCE_CHECKLIST.md  FRONTEND_ARCHITECTURE.md  PROJECT_RULES.md  README.md  STT_INTEGRATION_GUIDE.md  config.yaml  default_config.yaml  production_config.yaml  pyproject.toml  requirements.txt  run_backend.py  server.py  server_config.yaml  test_config.yaml  test_vscode_setup.py  testdeepgram.py
STT/: __init__.py  connection.py  deepgram_stt.py  handlers.py  keepalive.py
api/: dependencies.py  lifecycle.py  main.py
api/config/: logging.py  settings.py
api/handlers/: __init__.py  websocket_handlers.py
api/models/: chat_models.py
api/routers/: health.py  metrics.py
api/services/: connection_manager.py
backend/: __init__.py  __main__.py  backend_config.yaml  chatbot.py  config.py  connection_config.py  conversation.py  exceptions.py  session.py
backend/utils/: __init__.py  content_extraction.py  error_handling.py  security.py
client/: __init__.py  __main__.py  chatbot.py  chatbot_stt.py  chatbot_stt_official.py  chatbot_stt_working.py  cli.py  client.py  client_config.yaml  config.py  config.yaml  connection_config.py  conversation.py  session.py
docs/: ERROR_HANDLING.md
examples/: error_handling_demo.py
frontends/: kivy_frontend.py  terminal_frontend.py
scripts/: quality_check.sh
server/: __init__.py  default_backend_config.yaml  dynamic_backend_config.yaml  dynamic_client_config.yaml  dynamic_tools.py  requirements.txt  server.py
server_pharmacy/: SERVER_INTERFACE.md  default_client_config.yaml  dynamic_client_config.yaml  dynamic_tools.py  requirements.txt  server.py
stt/: connection.py  deepgram_stt.py  handlers.py  keepalive.py
tests/: __init__.py  conftest.py
tests/api/: test_connection_manager.py  test_dependencies.py  test_health.py  test_lifecycle_simple.py  test_logging_simple.py  test_main.py  test_settings_simple.py  test_structured_logging.py
tests/backend/: test_backend_config.py  test_chatbot_simple.py  test_content_extraction.py  test_exceptions.py  test_main.py  test_security.py  test_session.py
tests/server/: test_dynamic_tools.py  test_server_basic.py
