[project]
name = "chatbot-backend"
version = "0.1.0"
description = "A clean architecture backend with client and server components"
requires-python = ">=3.10"
dependencies = [
    "nest-asyncio>=1.5.6",
    "python-dotenv>=1.0.0",
    "openai>=1.1.0",
    "ipykernel>=6.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.1",
    "fastmcp>=2.0.0",
    "watchfiles>=0.21.0",
    "aiofiles>=23.1.0",
    "deepgram-sdk>=3.0.0",
    "pyaudio>=0.2.11",
    # FastAPI backend dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "aioconsole>=0.8.1",
]

[project.optional-dependencies]
client = [
    "nest-asyncio>=1.5.6",
    "python-dotenv>=1.0.0",
    "openai>=1.1.0",
    "ipykernel>=6.0.0",
    "deepgram-sdk>=3.0.0",
    "pyaudio>=0.2.11",
]
server = [
    "nest-asyncio>=1.5.6",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.0.0",
    "openai>=1.1.0",
    "ipykernel>=6.0.0",
    "pyyaml>=6.0.1",
    "watchfiles>=0.21.0",
    "aiofiles>=23.1.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
]
kivy = [
    "kivy>=2.2.0",
    "websockets>=12.0",
    "asyncio-dgram>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "server", "api"]

[tool.uv]
dev-dependencies = [] 
